# FurSimulation

./: .gitignore.txt  CMakeLists.txt  README.md
cmake/: Findglm.cmake
presentation/: presentation.tex
src/: HairFactory.cpp  HairFactory.h  ISimulation.cpp  ISimulation.h  Vertex.cpp  Vertex.h  Visualizer.cpp  Visualizer.h  main.cpp  mkvid.sh
src/sim/: FTL.cpp  FTL.cpp.bak.bak  FTL.h  PBD.cpp  PBD.h
